--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ list-style-type: none;
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 .section1 .box-container{
@@ -270,22 +271,105 @@ transition: .3s;
 /* /////////////section3////// */
 
 .section3{
-    height: 700px;
-    border: 1px solid red;
+    height: 600px;
     display: flex;
-    justify-content: center;
+    justify-content:space-evenly;
     align-items: center;
+    flex-direction: column;
 }
 
 
+
+
 .section3 .box-container{
-    height: 700px;
+    width: 80%;
+    height: 350px;
+    display: flex;
+    justify-content: space-evenly;
+
+}
+
+.section3 .box-container .box{
+   height: 350px;
+   width: 350px;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+}
+
+.section3 .box-container .box .img{
     width: 75%;
-    border: 1px solid rgb(25, 0, 255);
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
+.section3 .box-container .box img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+.section3 .box-container .box h2{
+    font-size: 18px;
+    margin-top: 10px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 100;
+}
+
+
+.section3 .box-container .box .estrelas{
+    margin-top: 5px;
+    margin-bottom: 5px;
+
+}
+
+.section3 .box-container .box .estrelas i{
+    color:#c4c432;
+
+
+}
+
+.section3 .box-container .box p{
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
 }
 
 .section3 .titulo h1{
     font-family: 'fonte6';
     font-weight: 100;
     font-size: 80px;
+}
+
+
+/* ////////section4////////////// */
+
+.section4{
+    /* border: 1px solid red; */
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    background-color: #3b1f02;
+}
+
+.section4 .titulo h1{
+    font-family: 'fonte3';
+    font-weight: 100;
+    font-size: 80px;
+}
+
+.section4 .box{
+    height: 500px;
+    width: 50%;
+}
+
+.section4 .box p{
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
 }
